[package]
name = "rjson"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.0", features = ["extra-traits"] }
proc-macro2 = "1.0.0"
quote = "1.0.0"
darling = "0.20.3"
serde_json = "1.0.100"
